# log-factory-package

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
simple_log_factory/: __init__.py  log_factory.py  readme.md
tests/: conftest.py  test_init.py  test_log_context.py  test_log_factory.py
