[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_log_factory"
version = "1.0.0"
description = "Simple Log Factory – a lightweight wrapper around Python's logging module."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Breno RdV", email = "hello@raccoon.ninja" },
]
keywords = ["python", "log", "logging", "factory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/brenordv/log-factory-package"
Repository = "https://github.com/brenordv/log-factory-package"
Issues = "https://github.com/brenordv/log-factory-package/issues"

[tool.setuptools.packages.find]
include = ["simple_log_factory*"]

[tool.setuptools.package-data]
simple_log_factory = ["py.typed", "README.md", "LICENSE.md", "CHANGELOG.md"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
